# datasette-events-db

./: README.md  pyproject.toml
.github/workflows/: test.yml
datasette_events_db/: __init__.py
tests/: test_events_db.py
