[project]
name = "datasette-events-db"
version = "0.1"
description = "Log Datasette events to a database table"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-events-db"
Changelog = "https://github.com/simonw/datasette-events-db/releases"
Issues = "https://github.com/simonw/datasette-events-db/issues"
CI = "https://github.com/simonw/datasette-events-db/actions"

[project.entry-points.datasette]
events_db = "datasette_events_db"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
