[project]
name = "datasette-events-db"
version = "0.1a0"
description = "Log Datasette events to a database table"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette>=1.0a8"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-events-db"
Changelog = "https://github.com/datasette/datasette-events-db/releases"
Issues = "https://github.com/datasette/datasette-events-db/issues"
CI = "https://github.com/datasette/datasette-events-db/actions"

[project.entry-points.datasette]
events_db = "datasette_events_db"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
